chore: fix cropping issue on mobile & update border radius

--- a/static/carousel.css
+++ b/static/carousel.css
@@ -50,7 +50,6 @@
 .carousel-slider .swiper-slide img {
   height: auto;
   object-fit: contain;
-  border-radius: 12px;
   max-width: 100%;
   max-height: 100%;
 }
